
=head1 ACKNOWLEDGEMENTS

Extra Thanks to:

Andreas Koenig <andreas.koenig@franz.ww.tu-berlin.de>
for *lots* of bug spotting, fixing and patching, 
Apache::Registry and CGI.pm overhaul efforts (aka CGI::XA &
CGI::Switch) 

Gisle Aas <aas@sn.no>
For getting this effort started and many contributions since 

Other contributors are mentioned below.

=head1 CHANGES

=over 3

=item 1.11_01-dev

fix bug when PERL_MARK_WHERE was undefined spotted by Kermit Tensmeyer

emulate pre-1.3b6 r->uri/r->proxyreq behavior for proxy requests
inside the post_read_request_handler and add t/internal/proxy test 

added additional installation document INSTALL.apaci which
describes the new APACI stuff (including background information).
[Ralf S. Engelschall <rse@engelschall.com>]

added new (but still optional!) Apache 1.3 support via the new Apache
Autoconf-style Interface (APACI): The option USE_APACI=1 triggers a new
build-environment (from local apaci/) for the APACHE_SRC/src/modules/perl/
which provides a clean way (i.e.  without patching anything inside APACHE_SRC,
not even the Configuration file) of configuring mod_perl via a
APACHE_SRC/src/modules/perl/mod_perl.config file. The completey configuration
is enabled by just using the APACI command "configure
--activate-module=src/modules/perl/libperl.a" 
[Ralf S. Engelschall <rse@engelschall.com>]

experimental tie of $0 to Apache->request->filename, enable with
-DPERL_TIE_SCRIPTNAME  

added little Apache::system that redirects output to the browser,
should this be imported into Apache::{Registry,PerlRun} scripts?

new Apache::Tie module, provides Apache::TieHashTable for a proper
interface to Apache table structures.  The following methods, called
in a scalar context with no "key" argument, will return a HASH
reference, where HASH is tied to Apache::TieHashTable:
headers_in, headers_out, err_headers_out, notes, dir_config, subprocess_env
enable with PERL_TIE_TABLES=1
see also: t/net/perl/tie_table.pl
