@@ -16,6 +16,8 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
+- have Makefile.PL check for HTML::HeadParser
+
 - Gerald's report of Embperl/sub-request/print breakage
 
 - make sure SERVER_VERSION/SERVER_SUBVERSION, etc. is in sync w/ 1.3b7 changes
