@@ -22,6 +22,10 @@ Other contributors are mentioned below.
 
 =item 1.11_01-dev
 
+avoid some possible warnings in Apache.pm [Brian Mosley <ix@maz.org>]
+
+added $r->request_time method
+
 fix bug when PERL_MARK_WHERE was undefined spotted by Kermit Tensmeyer
 
 emulate pre-1.3b6 r->uri/r->proxyreq behavior for proxy requests
